Update PocketPlugins to MC v1.21